--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -3,6 +3,12 @@
 @import url('chat.css');
 @import url('experience.css');
 @import url('members.css');
+/* css main variables */
+:root {
+    --mylife-base-z-index: 1;
+	--mylife-help-z-index: 5;
+	--mylife-sidebar-z-index: 20;
+}
 /* MyLife layout */
 body {
 	background-color: #000000;
@@ -346,8 +352,16 @@ body {
 	opacity: 0;
 	display: none; /* Initially not displayed */
 }
+.hide {
+    animation: none !important;
+    display: none !important;
+}
 .ital {
 	font-style: italic;
+}
+.show {
+    display: flex !important;
+	opacity: 1 !important;
 }
 .signup {
 	display: flex;
@@ -448,7 +462,7 @@ body {
 	padding: 0;
     position: absolute;
     width: 45%; /* default width */
-    z-index: 100;
+    z-index: calc(var(--mylife-sidebar-z-index)+10);
 }
 .popup-content {
 	color: navy;
@@ -584,7 +598,7 @@ body {
     right: 1em;
     top: 2.2em; /* Position it right below the parent */
     width: 63%;
-    z-index: 100; /* Make sure it's above other elements */
+    z-index: var(--mylife-help-z-index); /* Make sure it's above other elements */
 }
 .help-header {
 	font-size: 1.5rem;
@@ -684,14 +698,11 @@ body {
     flex: 1 1 auto; /* Allows growth and shrinkage */
     font-family: "Optima", "Segoe UI", "Candara", "Calibri", "Segoe", "Optima", Arial, sans-serif;
     font-size: 0.8em;
+    height: auto; /* Ensure it adjusts based on content */
     max-height: 100vh; /* Prevents exceeding the viewport height */
     max-width: 35%;
     padding: 0px;
-    height: auto; /* Ensure it adjusts based on content */
-}
-.visible {
-	opacity: 1;
-	display: block;
+	z-index: var(--mylife-sidebar-z-index);
 }
 .widget {
     align-items: center; /* rows get left-aligned */
